# angular

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  browser-providers.conf.d.ts  karma-js.conf.js  package.json
.circleci/: config.yml
aio/: BUILD.bazel  package.json
aio/content/examples/: examples.bzl
aio/content/examples/angular-compiler-options/: example-config.json
aio/content/examples/forms-overview/: example-config.json
aio/content/examples/http/: example-config.json
aio/content/examples/i18n/: angular.json  example-config.json
aio/content/examples/service-worker-getting-started/: example-config.json
aio/content/examples/universal/: example-config.json
aio/scripts/: BUILD.bazel  extract-cli-commands.js
aio/src/: index.html
aio/tools/: defaults.bzl  local-packages.installer.mjs
aio/tools/esm-loader/: BUILD.bazel  esm-loader.mjs  package.json
aio/tools/example-zipper/: BUILD.bazel
aio/tools/examples/: BUILD.bazel  run-example-e2e.mjs
aio/tools/examples/shared/: BUILD.bazel  package.json
aio/tools/examples/shared/boilerplate/cli/: angular.json
aio/tools/examples/shared/boilerplate/i18n/: angular.json
aio/tools/examples/shared/boilerplate/schematics/: angular.json
aio/tools/examples/shared/boilerplate/service-worker/: angular.json
aio/tools/examples/shared/boilerplate/systemjs/: protractor.config.js
aio/tools/examples/shared/boilerplate/testing/: angular.json
aio/tools/examples/shared/boilerplate/universal/: angular.json
aio/tools/ng-packages-installer/: BUILD.bazel  index.js  node_modules.bzl
aio/tools/stackblitz-builder/: BUILD.bazel  loader.mjs
aio/tools/transforms/: config.js
aio/tools/transforms/angular-api-package/processors/: processSpecialElements.js
aio/tools/transforms/angular-base-package/: index.js
aio/tools/transforms/angular-base-package/post-processors/: add-image-dimensions.js
aio/tools/transforms/angular-base-package/services/: getImageDimensions.js
aio/tools/transforms/cli-docs-package/: index.js
aio/tools/transforms/cli-docs-package/processors/: processCliContainerDoc.js
aio/tools/transforms/examples-package/: BUILD.bazel
aio/tools/transforms/helpers/: BUILD.bazel
integration/: index.bzl
integration/bazel_workspace_tests/bazel_ngtsc_plugin/: WORKSPACE  package.json
integration/bazel_workspace_tests/bazel_ngtsc_plugin/test/e2e/: BUILD.bazel
tools/: defaults.bzl
tools/saucelabs-daemon/: BUILD.bazel  ipc-messages.ts
tools/saucelabs-daemon/background-service/: BUILD.bazel  cli.ts  ipc.ts  saucelabs-daemon.ts
tools/saucelabs-daemon/launcher/: BUILD.bazel
