load("@aio_npm//@angular-devkit/architect-cli:index.bzl", "architect", "architect_test")
load("@build_bazel_rules_nodejs//:index.bzl", "npm_package_bin")
load("@aspect_bazel_lib//lib:write_source_files.bzl", generated_files_test = "write_source_files")

exports_files([
    "firebase.json",
    "ngsw-config.template.json",
])

# Generate ngsw-config then write it to the source directory
# so that architect can load it
npm_package_bin(
    name = "ngsw-config",
    outs = ["ngsw-config_generated.json"],
    args = ["$@"],
    tool = "//aio/scripts:build-ngsw-config",
)

generated_files_test(
    name = "write-ngsw-config",
    files = {
        "ngsw-config.json": ":ngsw-config",
    },
)

npm_package_bin(
    name = "dgeni",
    output_dir = True,
    args = ["./aio/tools/transforms/angular.io-package"],
    data = glob([
        "tools/transforms/**/*",
        "content/cli/*.md",
        "content/examples/.gitignore",
        "content/cli-src/node_modules/@angular/cli/**/*",
        "content/errors/*.md",
        "content/examples/accessibility/*",
        "content/examples/accessibility/src/**",
        "content/examples/ajs-quick-reference/*",
        "content/examples/ajs-quick-reference/src/**",
        "content/examples/angular-compiler-options/*",
        "content/examples/angular-compiler-options/src/**",
        "content/examples/animations/*",
        "content/examples/animations/src/**",
        "content/examples/architecture/*",
        "content/examples/architecture/src/**",
        "content/examples/attribute-binding/*",
        "content/examples/attribute-binding/src/**",
        "content/examples/attribute-directives/*",
        "content/examples/attribute-directives/src/**",
        "content/examples/binding-syntax/*",
        "content/examples/binding-syntax/src/**",
        "content/examples/template-syntax/*",
        "content/examples/template-syntax/src/**",
        "content/examples/bootstrapping/*",
        "content/examples/bootstrapping/src/**",
        "content/examples/built-in-directives/*",
        "content/examples/built-in-directives/src/**",
        "content/examples/structural-directives/*",
        "content/examples/structural-directives/src/**",
        "content/examples/cli-builder/*",
        "content/examples/cli-builder/src/**",
        "content/examples/comparing-observables/*",
        "content/examples/comparing-observables/src/**",
        "content/examples/component-interaction/*",
        "content/examples/component-interaction/src/**",
        "content/examples/component-interaction/e2e/src/**",
        "content/examples/component-overview/*",
        "content/examples/component-overview/src/**",
        "content/examples/component-styles/*",
        "content/examples/component-styles/src/**",
        "content/examples/content-projection/*",
        "content/examples/content-projection/src/**",
        "content/examples/angular-linker-plugin/*",
        "content/examples/angular-linker-plugin/src/**",
        "content/examples/dependency-injection-in-action/*",
        "content/examples/dependency-injection-in-action/src/**",
        "content/examples/dependency-injection/*",
        "content/examples/dependency-injection/src/**",
        "content/examples/deprecation-guide/*",
        "content/examples/deprecation-guide/src/**",
        "content/examples/docs-style-guide/*",
        "content/examples/docs-style-guide/src/**",
        "content/examples/styleguide/*",
        "content/examples/styleguide/src/**",
        "content/examples/dynamic-component-loader/*",
        "content/examples/dynamic-component-loader/src/**",
        "content/examples/dynamic-form/*",
        "content/examples/dynamic-form/src/**",
        "content/examples/elements/*",
        "content/examples/elements/src/**",
        "content/examples/event-binding/*",
        "content/examples/event-binding/src/**",
        "content/examples/feature-modules/*",
        "content/examples/feature-modules/src/**",
        "content/examples/form-validation/*",
        "content/examples/form-validation/src/**",
        "content/examples/forms-overview/*",
        "content/examples/forms-overview/src/**",
        "content/examples/forms/*",
        "content/examples/forms/src/**",
        "content/examples/template-reference-variables/*",
        "content/examples/template-reference-variables/src/**",
        "content/examples/resolution-modifiers/*",
        "content/examples/resolution-modifiers/src/**",
        "content/examples/providers-viewproviders/*",
        "content/examples/providers-viewproviders/src/**",
        "content/examples/hierarchical-dependency-injection/*",
        "content/examples/hierarchical-dependency-injection/src/**",
        "content/examples/http/*",
        "content/examples/http/src/**",
        "content/examples/i18n/*",
        "content/examples/i18n/src/**",
        "content/examples/i18n/doc-files/**",
        "content/examples/inputs-outputs/*",
        "content/examples/inputs-outputs/src/**",
        "content/examples/interpolation/*",
        "content/examples/interpolation/src/**",
        "content/examples/lazy-loading-ngmodules/*",
        "content/examples/lazy-loading-ngmodules/src/**",
        "content/examples/lifecycle-hooks/*",
        "content/examples/lifecycle-hooks/src/**",
        "content/examples/ngmodules/*",
        "content/examples/ngmodules/src/**",
        "content/examples/observables-in-angular/*",
        "content/examples/observables-in-angular/src/**",
        "content/examples/observables/*",
        "content/examples/observables/src/**",
        "content/examples/pipes/*",
        "content/examples/pipes/src/**",
        "content/examples/practical-observable-usage/*",
        "content/examples/practical-observable-usage/src/**",
        "content/examples/property-binding/*",
        "content/examples/property-binding/src/**",
        "content/examples/providers/*",
        "content/examples/providers/src/**",
        "content/examples/reactive-forms/*",
        "content/examples/reactive-forms/src/**",
        "content/examples/router/*",
        "content/examples/router/src/**",
        "content/examples/router-tutorial/*",
        "content/examples/router-tutorial/src/**",
        "content/examples/routing-with-urlmatcher/*",
        "content/examples/routing-with-urlmatcher/src/**",
        "content/examples/rx-library/*",
        "content/examples/rx-library/src/**",
        "content/examples/schematics-for-libraries/*",
        "content/examples/schematics-for-libraries/src/**",
        "content/examples/schematics-for-libraries/projects/**",
        "content/examples/security/*",
        "content/examples/security/src/**",
        "content/examples/service-worker-getting-started/*",
        "content/examples/service-worker-getting-started/src/**",
        "content/examples/set-document-title/*",
        "content/examples/set-document-title/src/**",
        "content/examples/template-expression-operators/*",
        "content/examples/template-expression-operators/src/**",
        "content/examples/built-in-template-functions/*",
        "content/examples/built-in-template-functions/src/**",
        "content/examples/testing/*",
        "content/examples/testing/src/**",
        "content/examples/two-way-binding/*",
        "content/examples/two-way-binding/src/**",
        "content/examples/getting-started/*",
        "content/examples/getting-started/src/**",
        "content/examples/universal/*",
        "content/examples/universal/src/**",
        "content/examples/upgrade-module/*",
        "content/examples/upgrade-module/src/**",
        "content/examples/upgrade-phonecat-2-hybrid/*",
        "content/examples/upgrade-phonecat-2-hybrid/app/**",
        "content/examples/upgrade-phonecat-2-hybrid/aot/**",
        "content/examples/upgrade-phonecat-2-hybrid/src/**",
        "content/examples/upgrade-phonecat-1-typescript/*",
        "content/examples/upgrade-phonecat-1-typescript/app/**",
        "content/examples/upgrade-phonecat-1-typescript/aot/**",
        "content/examples/upgrade-phonecat-1-typescript/src/**",
        "content/examples/upgrade-phonecat-3-final/*",
        "content/examples/upgrade-phonecat-3-final/app/**",
        "content/examples/upgrade-phonecat-3-final/aot/**",
        "content/examples/upgrade-phonecat-3-final/src/**",
        "content/examples/upgrade-setup/*",
        "content/examples/upgrade-setup/src/**",
        "content/examples/setup/*",
        "content/examples/setup/src/**",
        "content/examples/upgrade-lazy-load-ajs/*",
        "content/examples/upgrade-lazy-load-ajs/src/**",
        "content/examples/user-input/*",
        "content/examples/user-input/src/**",
        "content/examples/what-is-angular/*",
        "content/examples/what-is-angular/src/**",
        "content/examples/view-encapsulation/*",
        "content/examples/view-encapsulation/src/**",
        "content/examples/displaying-data/*",
        "content/examples/displaying-data/src/**",
        "content/examples/toh-pt0/*",
        "content/examples/toh-pt0/src/**",
        "content/examples/toh-pt1/*",
        "content/examples/toh-pt1/src/**",
        "content/examples/toh-pt2/*",
        "content/examples/toh-pt2/src/**",
        "content/examples/toh-pt3/*",
        "content/examples/toh-pt3/src/**",
        "content/examples/toh-pt4/*",
        "content/examples/toh-pt4/src/**",
        "content/examples/toh-pt5/*",
        "content/examples/toh-pt5/src/**",
        "content/examples/toh-pt6/*",
        "content/examples/toh-pt6/src/**",
        "content/examples/errors/**/*",
        "src/assets/**/*",
        "content/extended-diagnostics/*.md",
        "content/guide/*.md",
        "content/images/**/*",
        "content/marketing/**/*",
        "content/special-elements/**/*",
        "content/start/*.md",
        "content/tutorial/*.md",
        "content/*",
    ])+ [
        "//:package.json",
        "//:.git", # Need git metadata for dgeni git package
        "@aio_npm//dgeni-packages",
        "@aio_npm//entities",
        "@aio_npm//remark",
        "@aio_npm//remark-html",
        "@aio_npm//fs-extra",
        "@aio_npm//image-size",
        "@aio_npm//semver",
        "@aio_npm//unist-util-source",
        "@aio_npm//hast-util-to-string",
        "@aio_npm//hast-util-is-element",
        "@aio_npm//hast-util-has-property",
        "@aio_npm//css-selector-parser",
        "@aio_npm//rehype-slug",
        "@aio_npm//ignore",
        "@aio_npm//unist-util-filter",
        "@aio_npm//json5",
        "@aio_npm//stemmer",
        "//:packages",
    ],
    configuration_env_vars = ["PATH"], # Need path for dgeni package that invokes git
    # chdir = package_name(),
    env = {
        "DOCS_OUTPUT_PATH": "$(@D)",
    },
    tool = "@aio_npm//dgeni/bin:dgeni",
)

APPLICATION_DEPS = [
    "angular.json",
    "tsconfig.json",
    "tsconfig.worker.json",
    "package.json",
    "tsconfig.app.json",
    "ngsw-config.json",
    "@aio_npm//@angular-devkit/build-angular",
    "@aio_npm//@angular/core",
    "@aio_npm//@angular/cli",
    "@aio_npm//@angular/platform-browser-dynamic",
    "@aio_npm//@angular/material",
    "@aio_npm//@angular/animations",
    "@aio_npm//@angular/cdk",
    "@aio_npm//@angular/common",
    "@aio_npm//@angular/compiler",
    "@aio_npm//@angular/elements",
    "@aio_npm//@angular/forms",
    "@aio_npm//@angular/platform-browser",
    "@aio_npm//@angular/router",
    "@aio_npm//@angular/service-worker",
    "@aio_npm//rxjs",
    "@aio_npm//safevalues",
    "@aio_npm//tslib",
    "@aio_npm//zone.js",
    "@aio_npm//lunr",
    "@aio_npm//@types/lunr",
    "@aio_npm//@types/trusted-types",
]

architect(
    name = "build",
    args = [
        "site:build:stable",
        "--outputPath=../$(@D)",
    ],
    chdir = package_name(),
    configuration_env_vars = ["NG_BUILD_CACHE"],
    data = glob(
        [
            "src/**/*",
        ],
        exclude = [
            "src/**/*.spec.ts",
            # Temporarily exclude generated sources produced by the non-bazel
            # build until the whole project is build by bazel and this directory
            # isn't needed.
            "src/generated/**/*",
        ],
    ) + APPLICATION_DEPS + [":dgeni"],
    output_dir = True,
)

architect_test(
    name = "test",
    timeout = "long",
    args = [
        "site:test",
        "--no-watch",
    ],
    chdir = package_name(),
    configuration_env_vars = ["NG_BUILD_CACHE"],
    data = glob([
        "src/**/*",
    ]) + APPLICATION_DEPS + [
        "karma.conf.js",
        "tsconfig.spec.json",
        "@aio_npm//puppeteer",
        "@aio_npm//karma-jasmine",
        "@aio_npm//karma-chrome-launcher",
        "@aio_npm//karma-jasmine-html-reporter",
        "@aio_npm//@types/node",
        "@aio_npm//timezone-mock",
        "@aio_npm//@types/jasmine",
        "@aio_npm//jasmine",
        "@aio_npm//jasmine-core",
        "@aio_npm//karma-coverage",
        "@aio_npm//assert",
    ],
)

architect(
    name = "serve",
    args = ["site:serve"],
    configuration_env_vars = ["NG_BUILD_CACHE"],
    data = glob(
        [
            "src/**/*",
        ],
        exclude = [
            "src/**/*.spec.ts",
            # Temporarily exclude generated sources produced by the non-bazel
            # build until the whole project is build by bazel and this directory
            # isn't needed.
            "src/generated/**/*",
        ],
    ) + APPLICATION_DEPS,
    chdir = "aio/serve.sh.runfiles/angular/aio",
)