load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "generate-example-zip",
    data = [
        "exampleZipper.mjs",
        # "//aio/tools/transforms/examples-package",
        "//aio/tools/transforms/examples-package:files",
        "//aio/tools/transforms/helpers:files",
        "@aio_npm//archiver",
        "@aio_npm//canonical-path",
        "@aio_npm//fs-extra",
        "@aio_npm//globby",
        "@aio_npm//:BUILD.bazel",
        "//aio/tools/stackblitz-builder:loader.mjs",
    ],
    entry_point = "generateZip.mjs",
    env = {
        "FOOBAR": "$(execpath @aio_npm//:BUILD.bazel)",
    },
    # --preserve-symlinks-main is not enabled by default (see https://github.com/bazelbuild/rules_nodejs/pull/2176)
    # However it seems to be required for mjs entry points to resolve node_modules within the sandbox.
    # templated_args = ["--node_options=--preserve-symlinks-main",],
    templated_args = [
        "--nobazel_run_linker",
        "--node_options=--loader=./$(rootpath //aio/tools/stackblitz-builder:loader.mjs)",
    ],
)
