load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "loader.mjs",
])

nodejs_binary(
    name = "generate-stackblitz",
    data = [
        "builder.mjs",
        ":loader.mjs",
        "//aio/tools/transforms/examples-package:files",
        "//aio/tools/transforms/helpers:files",
        "@aio_npm//:BUILD.bazel",
        "@aio_npm//canonical-path",
        "@aio_npm//fs-extra",
        "@aio_npm//globby",
        "@aio_npm//jsdom",
    ],
    entry_point = "generateStackblitz.mjs",
    env = {
        "FOOBAR": "$(execpath @aio_npm//:BUILD.bazel)",
    },
    # --preserve-symlinks-main is not enabled by default (see https://github.com/bazelbuild/rules_nodejs/pull/2176)
    # However it seems to be required for mjs entry points to resolve node_modules within the sandbox.
    # templated_args = ["--node_options=--preserve-symlinks-main"],
    templated_args = [
        "--nobazel_run_linker",
        "--node_options=--loader=./$(rootpath :loader.mjs)",
    ],
)
