load("//tools:defaults.bzl", "esbuild", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "launcher",
    srcs = [
        "index.ts",
        "launcher.ts",
    ],
    devmode_module = "commonjs",
    deps = [
        "//tools/saucelabs-daemon",
        "@npm//@types/node",
    ],
)

esbuild(
    name = "launcher_cjs",
    entry_point = "index.ts",
    format = "cjs",
    output = "index.cjs",
    platform = "node",
    deps = [":launcher"],
)
