load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("@aio_npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

filegroup(
    name = "files",
    srcs = [
        "test-package.js",
        "utils.js",
    ],
    visibility = ["//visibility:public"],
)

js_library(
    name = "helpers",
    package_name = "helpers",
    srcs = [
        "test-package.js",
        "utils.js",
    ],
    visibility = ["//aio/tools:__subpackages__"],
    deps = [
        "//:package_json",
        "@aio_npm//canonical-path",
        "@aio_npm//dgeni",
    ],
)

jasmine_node_test(
    name = "test",
    srcs = glob(["*.spec.js"]),
    deps = [":helpers"],
)
